Sat Aug 11 21:56:22 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* main.c, main.h, misc.c, misc.h, io.c, io.h, decode.c, decode.h,
	error.h: cleanup, constify. Don't output identification string when
	options are specified.

Wed Aug  8 00:51:00 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* error.c, error.h, misc.c, misc.h, io.c, io.h, decode.c, main.c,
	main.h, decaof.h: Reindent, cleanup.
	* config.h, Makefile: Remove.
	* configure.ac, Makefile.am: Add.

2006-03-16 02:17  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c: Made decaof a little bit more robust against minimal AOF
	files (i.e. not all chunks available).

2005-10-09 21:05  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile: Moved some 'riscos-dist' work to here.

2005-10-08 19:24  John Tytgat  <John.Tytgat@aaug.net>

	* decaof.h, decode.c: Better and more area attribute support.

2005-10-08 12:10  John Tytgat  <John.Tytgat@aaug.net>

	* decaof.h, decode.c: Relocated the SOFTFLOAT AOF area attribute from
	bit 27 to bit 31 as area bits 24 - 27 (incl) are already used for
	specifying the 'base register for base area'.

2005-08-10 00:25  John Tytgat  <John.Tytgat@aaug.net>

	* main.c: Use __VERSION__ in version string too so that it is more
	clear from which GCCSDK release the binaries come from.

2005-07-23 21:33  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile: Move the #define of _GNU_SOURCE to the individual
	riscos-aof projects which require this.

2005-07-23 02:12  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c, main.c:
	- Output version string in an uniform way like done in as & drlink.
	- Output 'fp args in fp regs' and 'thumb' symbol attributes (when
	defined).
	- 'fpargs' symbol attribute is 1<<9, not 1<<8.

2005-07-14 22:40  John Tytgat  <John.Tytgat@aaug.net>

	* COPYING, Makefile, README, decaof.h, decode.c, decode.h, error.c,
	error.h, io.c, io.h, main.c, main.h, misc.c, misc.h:
	- Andy Duplain relicenced decaof under GPL. Marked this in all source